fluxcd/core/base/ceph-csi/netpol-rbd/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ceph-csi-rbd-provisioner
spec:
  podSelector:
    matchLabels:
      app: ceph-csi-rbd
      component: provisioner
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: ${CEPH_CIDR_0}
    - ipBlock:
        cidr: ${CEPH_CIDR_1}
    ports:
    - port: 3300
      protocol: TCP
    - port: 6789
      protocol: TCP
    - port: 6800
      endPort: 7300
      protocol: TCP
